# btc-rust-history

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.rust-workspace  chart-analitci.md  docker-compose.yml  feature_state.csv  task-plan.md  trading_system_design_handbook.md
.agents/skills/: SKILL.md
.ai/: rules.yaml
.claude/: settings.json
crates/common/: Cargo.toml  build.rs
crates/common/src/: clickhouse.rs  event.rs  indicators.rs  kafka.rs  lib.rs  model.rs
ddl/: postgres_init.sql
docs/: ai_run_check.md  architecture.md  dashboards.md  protobuf.md  runbook.md  topics.md
libs/python/hft_ai_runtime/: pyproject.toml
libs/python/hft_ai_runtime/hft_ai_runtime/: __init__.py  config.py  consumer.py  health.py  logging.py  metrics.py  producer.py
libs/python/hft_features/: pyproject.toml
libs/python/hft_features/hft_features/: __init__.py  normalizer.py  types.py  validation.py
libs/python/hft_features/tests/: test_features.py  test_proto.py
libs/python/hft_proto/: Makefile  pyproject.toml
libs/python/hft_proto/hft_proto/: __init__.py
libs/python/hft_proto/hft_proto/ai/: __init__.py  predictions_pb2.py  types.py
libs/python/hft_proto/hft_proto/common/: __init__.py  envelope_pb2.py  types.py
libs/python/hft_proto/hft_proto/md/: __init__.py  features_pb2.py  raw_ticks_pb2.py  types.py
libs/python/hft_proto/hft_proto/oms/: __init__.py  execution_reports_pb2.py  orders_pb2.py  positions_pb2.py
libs/rust/hft_common/: Cargo.toml
libs/rust/hft_common/src/: config.rs  error.rs  ids.rs  lib.rs  logging.rs  otel.rs  time.rs
libs/rust/hft_exchange/: Cargo.toml
libs/rust/hft_exchange/src/: lib.rs  rate_limit.rs
libs/rust/hft_exchange/src/binance/: mod.rs  rest.rs  signer.rs  types.rs  user_stream.rs
libs/rust/hft_mq/: Cargo.toml
libs/rust/hft_mq/src/: commit.rs  config.rs  consumer.rs  dlq.rs  lib.rs  producer.rs
libs/rust/hft_proto/: Cargo.toml  build.rs
libs/rust/hft_proto/src/: encode.rs  lib.rs  versions.rs
libs/rust/hft_redis/: Cargo.toml
libs/rust/hft_redis/src/: client.rs  keys.rs  lib.rs  rate_limit.rs
libs/rust/hft_risk/: Cargo.toml
libs/rust/hft_risk/src/: gates.rs  lib.rs  limits.rs  reject_reason.rs  sizing.rs
libs/rust/hft_store/: Cargo.toml
libs/rust/hft_store/src/: lib.rs
libs/rust/hft_store/src/pg/: migrate.rs  mod.rs  models.rs  pool.rs  types.rs
libs/rust/hft_store/src/repos/: events_repo.rs  fills_repo.rs  logs_repo.rs  mod.rs  orders_repo.rs  positions_repo.rs  risk_repo.rs  strategies_repo.rs
observability/: otel-collector-config.yaml  prometheus.yml
services/agg_15m/: Cargo.toml
services/agg_15m/src/: main.rs
services/ai_predictor/: pyproject.toml
services/ai_predictor/app/: __init__.py  config.py  logging.py  main.py  metrics.py
services/ai_predictor/app/consumers/: __init__.py  features_consumer.py
services/ai_predictor/app/inference/: __init__.py  model_loader.py  postprocess.py  runner.py
services/ai_predictor/app/producers/: __init__.py  predictions_producer.py
services/api_gateway/: Cargo.toml  Dockerfile
services/api_gateway/src/: main.rs  mq.rs  openapi.rs
services/api_gateway/src/routes/: logs.rs  md.rs  mod.rs  orders.rs  pnl.rs  positions.rs  risk.rs  signals.rs  strategies.rs  trades.rs  verification.rs
services/execution_router/: Cargo.toml  Dockerfile
services/execution_router/order_executor/: Dockerfile
services/execution_router/order_executor/src/: config.rs  main.rs
services/execution_router/paper_trader/: Cargo.toml  Dockerfile
services/execution_router/paper_trader/src/: config.rs  main.rs
services/execution_router/risk_guard/: Dockerfile
services/execution_router/risk_guard/src/: audit.rs  checker.rs  config.rs  main.rs
services/execution_router/src/: config.rs  main.rs
services/execution_router/src/consumers/: order_commands.rs
services/execution_router/src/oms/: dedup.rs
services/execution_router/src/producers/: execution_reports.rs  positions_snapshots.rs
services/execution_router/src/store/: writer.rs
services/feature_engine/: Cargo.toml  Dockerfile
services/feature_engine/feature_state/: Cargo.toml
services/feature_engine/src/: config.rs  consumer.rs  health.rs  main.rs  producer.rs
services/feature_engine/src/indicators/: ema.rs  macd.rs  mod.rs  rsi.rs  vwap.rs
services/feature_engine/src/state/: mod.rs  registry.rs  symbol_state.rs
services/feature_state/: Cargo.toml
services/feature_state/src/: main.rs
services/ingestion/: Cargo.toml
services/ingestion/src/: config.rs  main.rs  models.rs
services/ingestion/src/sources/: binance_discovery.rs  binance_ws.rs
services/marketdata_ingestor/: Cargo.toml  Dockerfile
services/marketdata_ingestor/ingestion/: Cargo.toml
services/marketdata_ingestor/ingestion/src/: main.rs
services/marketdata_ingestor/src/: candle.rs  config.rs  health.rs  main.rs
services/marketdata_ingestor/src/ws/: binance.rs  reconnect.rs
services/mc_snapshot/: Cargo.toml
services/mc_snapshot/src/: main.rs
services/order_executor/: Cargo.toml
services/order_executor/src/: main.rs
services/paper_trader/: Cargo.toml
services/paper_trader/src/: config.rs  main.rs
services/risk_guard/: Cargo.toml
services/risk_guard/src/: audit.rs  checker.rs  config.rs  health.rs  main.rs
services/signal_engine/: Cargo.toml
services/signal_engine/src/: main.rs
services/strategy_engine/: Cargo.toml
services/strategy_engine/mc_snapshot/: Dockerfile
services/strategy_engine/mc_snapshot/src/: main.rs
services/strategy_engine/signal_engine/: Cargo.toml  Dockerfile
services/strategy_engine/signal_engine/src/: main.rs  zscore_model.rs
services/strategy_engine/src/: config.rs  main.rs
services/strategy_engine/src/decision_log/: writer.rs
services/strategy_engine/src/planner/: idempotency.rs
services/strategy_engine/src/producers/: order_commands.rs
services/web/: Cargo.toml
services/web/src/: main.rs
services/web/src/routes/: orders.rs
src/: main.rs
static/: index.html
tests/: TEST_CASES.md  verify_oms_loop.py
(+85 files in other folders)
