[package]
name = "binance-instruments-sync"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
clickhouse = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
parking_lot = "0.12.4"
tokio-tungstenite = "0.27.0"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
