[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.38.0", features = ["tokio"] }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
clickhouse = { version = "0.13.3", features = ["lz4","native-tls"] }
