[package]
name        = "common"
version     = "0.1.0"
edition     = "2021"
description = "Shared proto types, domain models, and utilities for all services"

# ---------------------------------------------------------------------------
# The generated protobuf module is included via include!() in src/lib.rs.
# ---------------------------------------------------------------------------
[dependencies]
prost        = { workspace = true }
prost-types  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

[build-dependencies]
# Compiles all .proto files in proto/ into Rust code at build time
prost-build = "0.13"
glob        = "0.3"
