[package]
name        = "common"
version     = "0.1.0"
edition     = "2021"
description = "Shared domain models and utilities for all services"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
