[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_predictor"
version = "0.1.0"
description = "AI inference service — consumes feature vectors, publishes AI trading signals"
requires-python = ">=3.11"
dependencies = [
    "hft_proto",
    "hft_features",
    "hft_ai_runtime",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
ai-predictor = "app.main:run"
