[package]
name        = "feature_engine"
version     = "0.1.0"
edition     = "2021"
description = "Incremental technical indicator engine — consumes candles, publishes feature vectors"

[[bin]]
name = "feature_engine"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
rustls             = { workspace = true }
rdkafka            = { workspace = true }
serde.workspace = true
serde_json         = { workspace = true }
prost              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
dashmap            = { workspace = true }
axum               = { workspace = true }
dotenvy            = { workspace = true }
hft-proto          = { workspace = true }
hft_common         = { workspace = true }
hft_mq             = { workspace = true }
clickhouse.workspace = true
