[package]
name = "marketdata_ingestor"
version = "0.1.0"
edition = "2021"
description = "Binance WS ingestor for raw trades/book with reconnect state machine"

[[bin]]
name = "marketdata_ingestor"
path = "src/main.rs"

[dependencies]
hft-proto = { workspace = true }
hft_common = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
url = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
