[package]
name = "mc_snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clickhouse = { version = "0.13.3", features = ["lz4","native-tls"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
urlencoding = "2.1.3"
