[package]
name        = "mc_snapshot"
version     = "0.1.0"
edition     = "2021"
description = "Polls external market-cap API and persists snapshots to ClickHouse"

[[bin]]
name = "mc_snapshot"
path = "src/main.rs"

[dependencies]
common            = { workspace = true }

# Async
tokio             = { workspace = true }
futures           = { workspace = true }

# Kafka producer (publishes TOPIC_MC_SNAPSHOT)
rdkafka           = { workspace = true }

# HTTP client – fetch market cap data from external API (CoinGecko)
reqwest           = { workspace = true }

# ClickHouse – persist mc_snapshot table
clickhouse        = { workspace = true }

# Health endpoint
axum              = { workspace = true }

# Serialization
serde             = { workspace = true }
serde_json        = { workspace = true }

# Observability
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow            = { workspace = true }

# Config
dotenvy           = { workspace = true }
