[package]
name        = "order_executor"
version     = "0.1.0"
edition     = "2021"
description = "Consumes approved orders, submits to Binance REST, tracks fills via WS user stream"

[[bin]]
name = "order_executor"
path = "src/main.rs"

[dependencies]
common            = { workspace = true }
hft-proto         = { workspace = true }
hft_common        = { workspace = true }
hft-store         = { workspace = true }

# Async
tokio             = { workspace = true }
futures           = { workspace = true }

# Kafka consumer (TOPIC_ORDERS_APPROVED) + producer (TOPIC_FILLS)
rdkafka           = { workspace = true }

# Binance REST API
reqwest           = { workspace = true }
url               = { workspace = true }

# Binance WebSocket user stream (order/fill events)
tokio-tungstenite = { workspace = true }

# PostgreSQL – persist orders, order_events, trades
sqlx              = { workspace = true }

# Redis – idempotency dedup (client_order_id seen set)
redis             = { workspace = true }

# Health endpoint
axum              = { workspace = true }

# Serialization
serde             = { workspace = true }
serde_json        = { workspace = true }
bytes             = { workspace = true }
prost             = { workspace = true }

# Observability
tracing                         = { workspace = true }
tracing-subscriber              = { workspace = true }
opentelemetry                   = { workspace = true }
opentelemetry_sdk               = { workspace = true }
opentelemetry-otlp              = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry           = { workspace = true }

# Error handling
thiserror         = { workspace = true }
anyhow            = { workspace = true }

# Types
uuid              = { workspace = true }
chrono            = { workspace = true }
rust_decimal      = { workspace = true }   # price/qty with no float error

# Binance HMAC-SHA256 request signing
hmac              = { workspace = true }
sha2              = { workspace = true }
hex               = { workspace = true }

# In-memory order-state map (lock-free concurrent access)
dashmap           = { workspace = true }

# Config
dotenvy           = { workspace = true }
