[package]
name = "paper_trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
env_logger = "0.11"
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]

with-common = []
