[package]
name        = "paper_trader"
version     = "0.1.0"
edition     = "2021"
description = "Simulates order fills from approved orders without touching the real exchange"

[[bin]]
name = "paper_trader"
path = "src/main.rs"

[dependencies]
common            = { workspace = true }

# Async
tokio             = { workspace = true }
futures           = { workspace = true }

# Kafka consumer (TOPIC_ORDERS_APPROVED) + producer (TOPIC_FILLS)
rdkafka           = { workspace = true }

# Health endpoint
axum              = { workspace = true }

# Serialization
serde             = { workspace = true }
serde_json        = { workspace = true }
bytes             = { workspace = true }
prost             = { workspace = true }

# Observability
tracing                         = { workspace = true }
tracing-subscriber              = { workspace = true }
opentelemetry                   = { workspace = true }
opentelemetry_sdk               = { workspace = true }
opentelemetry-otlp              = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry           = { workspace = true }

# Error handling
thiserror         = { workspace = true }
anyhow            = { workspace = true }

# Types
uuid              = { workspace = true }
chrono            = { workspace = true }
rust_decimal      = { workspace = true }

# Simulated position state (symbol → position)
dashmap           = { workspace = true }

# Config
dotenvy           = { workspace = true }
