[package]
name = "risk_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
rdkafka = { version = "0.36", features = ["tokio"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros","rt-multi-thread","time"] }
