[package]
name = "signal_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rdkafka = { version = "0.38.0", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
common = { path = "../../crates/common" }
