[package]
name        = "signal_engine"
version     = "0.1.0"
edition     = "2021"
description = "Consumes FeatureState + AiPredictions, applies strategy rules, emits signals"

[[bin]]
name = "signal_engine"
path = "src/main.rs"

[dependencies]
common            = { workspace = true }
rustls            = { workspace = true }

# Async
tokio             = { workspace = true }
futures           = { workspace = true }

# Kafka consumer + producer
rdkafka           = { workspace = true }

# ClickHouse – persist signals table
clickhouse        = { workspace = true }
time              = { workspace = true }

# Redis – signal state (mirrors compacted TOPIC_SIGNAL_STATE)
redis             = { workspace = true }

# PostgreSQL – decision_logs audit table
sqlx              = { workspace = true }

# Health endpoint
axum              = { workspace = true }

# Serialization
serde             = { workspace = true }
serde_json        = { workspace = true }
bytes             = { workspace = true }
prost             = { workspace = true }

# Observability
tracing                         = { workspace = true }
tracing-subscriber              = { workspace = true }
opentelemetry                   = { workspace = true }
opentelemetry_sdk               = { workspace = true }
opentelemetry-otlp              = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry           = { workspace = true }

# Error handling
thiserror         = { workspace = true }
anyhow            = { workspace = true }

# Types
uuid              = { workspace = true }
chrono            = { workspace = true }
rust_decimal      = { workspace = true }    # price/qty arithmetic with no float drift

# Latest-features cache per symbol
dashmap           = { workspace = true }

# Config
dotenvy           = { workspace = true }
