[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8.4", features = ["macros", "json"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ClickHouse async client (matches your error log v0.13.x)
clickhouse = "0.13"

# CORS/Static/Trace on http v1
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
