[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hft_ai_runtime"
version = "0.1.0"
description = "Shared async Kafka consumer/producer runtime, logging, metrics and health for hft Python services"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3",
    "prometheus-client>=0.19",
    "structlog>=24.1",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["hft_ai_runtime"]
