[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hft_features"
version = "0.1.0"
description = "Feature vector types, validation, and normalization for hft trading services"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "hft_proto",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["hft_features"]
