[package]
name        = "hft-exchange"
version     = "0.1.0"
edition     = "2021"
description = "Centralized exchange adapters (Binance)"

[dependencies]
hft-proto   = { workspace = true }
hft_common  = { workspace = true }

# HTTP/WS
reqwest           = { workspace = true }
url               = { workspace = true }
tokio-tungstenite = { workspace = true }

# Crypto
hmac = { workspace = true }
sha2 = { workspace = true }
hex  = { workspace = true }

# Utils
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
dashmap    = { workspace = true }
futures    = { workspace = true }
